<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2017. This code has been developed by Fabio Ciravegna, The University of Sheffield. All rights reserved. No part of this code can be used without the explicit written permission by the author
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:onClick="screenTapped"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    android:padding="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="0dp"
        android:onClick="screenTapped"
        android:padding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:onClick="screenTapped"
            android:orientation="vertical"
            android:padding="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="0dp"
                android:layout_weight="200"
                android:onClick="screenTapped"
                android:padding="0dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/fab_backbutton2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|top"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="35dp"
                    android:src="@drawable/ic_arrow_back_white_24dp"
                    app:backgroundTint="@color/colorAccent"
                    app:fabSize="normal" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginBottom="0dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/gallery_large_desc"
                    android:onClick="screenTapped"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom">

                    <TextView
                        android:id="@+id/path_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#CCFFFFFF"
                        android:fontFamily="@font/roboto"
                        android:onClick="screenTapped"
                        android:padding="10dp"
                        android:paddingTop="20dp"
                        android:text="@string/path_title"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textSize="25sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/photo_pressure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/roboto"
                        android:onClick="screenTapped"
                        android:padding="4dp"
                        android:text="@string/photo_pressure"
                        android:textAlignment="viewStart"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/photo_temp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/roboto"
                        android:onClick="screenTapped"
                        android:padding="4dp"
                        android:paddingTop="20dp"
                        android:text="@string/photo_temp"
                        android:textAlignment="viewEnd"
                        android:textColor="@color/colorAccent"
                        android:textSize="15sp"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/hide_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="15dp"
                        android:text="@string/tap_shop"
                        android:textAlignment="textEnd"
                        android:textColor="#FFFFFF"
                        android:textSize="12sp"
                        android:textStyle="italic"
                        android:visibility="visible" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:onClick="screenTapped">

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="13dp"
                    android:layout_weight="1"
                    app:cardCornerRadius="7dp">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/path_description"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_gravity="bottom"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/loc_title"
                        android:textAlignment="center"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>